Limpando Imports do Projeto

--- a/WebAPI_Angular/appsettings.json
+++ b/WebAPI_Angular/appsettings.json
@@ -7,9 +7,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //MySQL
-    //"WebAPIDB": "server=localhost;userid=developer;password=anadesa123;database=WebAPIDB"
+    //"WebAPIDB": "server=localhost;userid="...";password="...";database=WebAPIDB"
 
     //SQL Server
-    //"WebAPIDB": "Server=GHS\\CRV_DATABASE;Database=WebAPIDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    //"WebAPIDB": "Server="...";Database=WebAPIDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
